--- a/Game/index.html
+++ b/Game/index.html
@@ -96,7 +96,7 @@
                         onkeydown="myFunction(event)"> </td>
         </tr>
     </table>
-    <h1> vikas</h1>
+    <!--script file-->
   
     <script>
         // Function that display value
